--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CellaVision Name Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,7 @@
         <button onclick="generateImages()">Generate Images</button>
         <div id="imageContainer"></div>
     </div>
-    <script src="main.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
 
